# Fractals

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
tp2-raj-sunil.mahajan-aka-mali/: fractals.ml  patterns.ml
tp2-raj-sunil.mahajan-aka-mali/..git/: config  index  packed-refs
tp2-raj-sunil.mahajan-aka-mali/..git/logs/refs/remotes/origin/: HEAD
tp2-raj-sunil.mahajan-aka-mali/..git/objects/pack/: pack-57c6b2d021a93257acf1f60f1a81707c5f44215c.idx  pack-57c6b2d021a93257acf1f60f1a81707c5f44215c.pack
tp2-raj-sunil.mahajan-aka-mali/..git/refs/heads/: master
